--- a/src/asset/detail.scss
+++ b/src/asset/detail.scss
@@ -211,6 +211,12 @@
           margin-top: 15px;
         }
 
+        .form-control {
+          @include input-text();
+          width: 100%;
+          margin-bottom: 0;
+        }
+
         .btn {
           font-size: 14px;
           padding: 0 10px;
