--- a/src/asset/home.scss
+++ b/src/asset/home.scss
@@ -24,7 +24,7 @@
 
       .post {
         display: flex;
-        width: 350px;
+        width: 20rem;
         height: auto;
         flex-direction: column;
         background: #fff;
