--- a/src/asset/profile.scss
+++ b/src/asset/profile.scss
@@ -95,6 +95,7 @@
       .name_area {
         display: flex;
         flex-direction: column;
+        width: 65%;
         padding-left: 25px;
 
         @media #{$breakpoint-mobile} {
@@ -102,6 +103,7 @@
           @include flex();
           flex-direction: column;
           margin-top: 10px;
+          width: 100%;
         }
 
         .nickname {
