--- a/src/asset/home.scss
+++ b/src/asset/home.scss
@@ -54,6 +54,7 @@
           border-top-left-radius: 5px;
           border-top-right-radius: 5px;
           overflow: hidden;
+          display: flex;
 
           img {
             width: 100%;
