--- a/src/asset/home.scss
+++ b/src/asset/home.scss
@@ -124,9 +124,9 @@
 
     .new-post {
       @include btn-Reset();
-      position: absolute;
+      position: fixed;
       bottom: 50px;
-      right: -20px;
+      right: 35px;
       width: 57px;
       transition-duration: 0.4s;
 
