--- a/src/asset/_mixin.scss
+++ b/src/asset/_mixin.scss
@@ -42,7 +42,7 @@
   @include flex();
   margin: 0 auto;
   max-width: 1920px;
-  height: 100vh;
+  min-height: 100vh;
   flex-direction: column;
   justify-content: flex-start;
 }
