--- a/src/asset/detail.scss
+++ b/src/asset/detail.scss
@@ -104,6 +104,7 @@
       margin-top: 20px;
       font-size: 20px;
       word-break: break-all;
+      min-height: 100px;
 
       @media #{$breakpoint-mobile} {
         margin-top: 15px;
