--- a/src/asset/detail.scss
+++ b/src/asset/detail.scss
@@ -105,6 +105,7 @@
       font-size: 20px;
       word-break: break-all;
       min-height: 50px;
+      overflow: hidden;
 
       @media #{$breakpoint-mobile} {
         margin-top: 15px;
